fixed letter-spacing

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -29,7 +29,9 @@ body {
     flex: 0 0 auto;
 }
 
-body {}
+body {
+    letter-spacing: 1px;
+}
 
 a {
     display: inline-block;
